# MY_PROJECT

./: .gitattributes  MR72_check.cpp  README.md  SocketCan.txt
ReadWrite/: CMakeLists.txt  INfile.txt
ReadWrite/src/: main  main.cpp
Tread/: CMakeLists.txt  Iop.txt
Tread/lib/: tread.cpp  tread.h
Tread/src/: main.cpp
